# QDAP-Framework

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt
src/controllers/unit_test/hzk_ctls/: CMakeLists.txt  DeviceInfoController.cpp  DeviceInfoController.h  HttpController.cpp  HttpController.h  TestController.cpp  TestController.h  TestDatabase.cpp  TestDatabase.h
src/kits/: CMakeLists.txt
src/kits/camera/: CameraManagerBase.cpp  CameraManagerBase.h
src/kits/camera/baumer/: BaumerCamera.cpp  BaumerCamera.h  BaumerManager.cpp  BaumerManager.h  CMakeLists.txt
src/kits/database/: CMakeLists.txt  CppBatis.h  DatabaseConnections.cpp  DatabaseConnections.h  DatabaseManager.cpp  DatabaseManager.h  MysqlConnections.cpp  MysqlConnections.h  PgsqlConnections.cpp  PgsqlConnections.h  SqlInsert.h  SqlQuery.h  SqlSelect.h
src/kits/kafka/: CMakeLists.txt  KafkaProducer.cpp
src/kits/object_pool/: ObjectPool.h
src/kits/orm/: OrmMapperImpl.h  OrmMapperMacros.h  TableStructs.h
src/kits/qml_kits/: CMakeLists.txt
src/kits/read_csv/: CMakeLists.txt
src/kits/required/controller_base/: CMakeLists.txt  ControllerBase.h  HttpControllerBase.h  QmlControllerBase.h
src/kits/required/factory/: ControllerRegister.h  ModuleRegister.h
src/kits/required/invoke/: CMakeLists.txt  InvokeBase.cpp  InvokeBase.h
src/kits/required/log/: CMakeLists.txt  CRossLogger.cpp  CRossLogger.h  HtmlFormatSink.h  PlainTextSink.h
src/kits/required/module_base/: CMakeLists.txt  ModuleBase.cpp  ModuleBase.h
src/kits/required/thread_pool/: CMakeLists.txt  ConcurrentPool.cpp  ConcurrentPool.h
src/kits/required/utils/: CMakeLists.txt  Utils.cpp  Utils.h
src/kits/serialization/: StructSerialization.h
src/kits/tcp/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
src/kits/udp/: CMakeLists.txt  UdpClient.cpp  UdpClient.h
src/modules/: CMakeLists.txt
src/modules/camera_lobby/: CMakeLists.txt  CameraLobby.cpp  CameraLobby.h
src/modules/dev_info/: CMakeLists.txt  DeviceInfo.h  DeviceManager.cpp  DeviceManager.h  WindowsInfo.cpp  WindowsInfo.h
src/modules/http_service/: HttpService.cpp  HttpService.h
src/modules/qml_engine/: CMakeLists.txt  QmlCommunication.cpp  QmlCommunication.h  QmlPrivateEngine.cpp  QmlPrivateEngine.h
src/service/: AppFramework.h  AppFrameworkImpl.cpp  AppFrameworkImpl.h  CMakeLists.txt
src/tis_global/: Field.h  Struct.h
tools/: tis_generator
